[package]
name = "tmup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tmux_interface = {version = "0.2.1", features = ["tmux_0_8"] }
