[package]
name = "tmup"
version = "0.1.1"
edition = "2021"

authors = ["Olivier Leduc <leduc.o@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tmux_interface = {version = "0.2.1", features = ["tmux_0_8"] }
